# Chat_with_my_data

./: .gitignore  README.md  demo.ipynb  demo.py  demo2.ipynb  demo3.ipynb  langchain.ipynb  pyproject.toml
